--- a/kontakt.css
+++ b/kontakt.css
@@ -40,6 +40,7 @@ main p {
 
 }
 
+/* styling til mobilstørrelse*/
 #container a {
     color: #F18FAB;
     text-decoration: none;
@@ -54,7 +55,6 @@ main p {
 }
 
 /*Media queries til mobile landscape*/
-
 @media screen and (min-width:627px) {
     main {
         width: 500px;
@@ -72,7 +72,6 @@ main p {
 }
 
 /*Media queries til tablet portrait*/
-
 @media screen and (min-width:768px) {
     main {
         width: 620px;
@@ -99,7 +98,6 @@ main p {
 }
 
 /*Media queries til tablet landscape*/
-
 @media screen and (min-width:1024px) {
     main {
         width: 850px;
@@ -125,7 +123,6 @@ main p {
 }
 
 /*Media queries til 1200px bredde*/
-
 @media screen and (min-width:1200px) {
     main {
         width: 900px;
@@ -143,7 +140,6 @@ main p {
 }
 
 /*Media queries til 1500px bredde*/
-
 @media screen and (min-width:1500px) {
     main {
         width: 1000px;
