--- a/vaerkstedet.css
+++ b/vaerkstedet.css
@@ -32,8 +32,7 @@ p {
 
 }
 
-/* MOBILE FIRST VERSION*/
-
+/* styling til mobilstørrelse*/
 main {
     width: 360px;
     margin: 0 auto;
@@ -57,7 +56,6 @@ article img {
 }
 
 /*Media queries til mobile landscape*/
-
 @media screen and (min-width:627px) {
     main {
         width: 500px;
