--- a/butikken.css
+++ b/butikken.css
@@ -55,12 +55,25 @@ article img {
     border: 1px solid black;
 }
 
+.film iframe{
+    width: 360px;
+    height: 360px;
+    border: 4px solid white;
+}
+
 /*Media queries til mobile landscape*/
 @media screen and (min-width:627px) {
     main {
         width: 500px;
         padding-top: 60px;
     }
+
+    .film iframe{
+        width: 500px;
+        height: 500px;
+
+}
+}
 
 
 /*Media queries til tablet portrait*/
@@ -88,6 +101,12 @@ article img {
         width: 49.6%;
         }
 
+    .film iframe{
+        width: 620px;
+        height: 500px;
+
+}
+
     }
 
 /*Media queries til tablet landscape*/
@@ -106,13 +125,21 @@ article img {
         }
 
     #container1 {
-        width: 530px;
+        width: 350px;
 
         }
 
     #container1 img {
-         width: 60%;
+         width: 77%;
         }
+
+    .film iframe{
+        width: 500px;
+        height: 500px;
+
+
+}
+}
 
 
 /*Media queries til 1200px bredde*/
@@ -123,18 +150,24 @@ article img {
     }
 
     #container {
-        width: 500px;
+        width: 550px;
 
     }
 
     #container1 {
-        width: 400px;
+        width: 350px;
 
     }
 
     #container1 img {
-        width: 81%;
+        width: 75%;
     }
+
+    .film iframe{
+        width: 550px;
+        height: 500px;
+        margin-top: -60px;
+}
 
 }
 
@@ -159,4 +192,13 @@ article img {
     #container1 img {
         width: 69%;
     }
+
+    .film iframe{
+        width: 600px;
+        height: 500px;
+        margin-top: -140px;
+
+
+
+}
 }
